--- a/WebContent/resources/templates/nomenu/decorator.xhtml
+++ b/WebContent/resources/templates/nomenu/decorator.xhtml
@@ -23,7 +23,7 @@
 		<!-- Main Header -->
 		<header class="main-header">
 			<!-- Logo -->
-			<a href="index2.html" class="logo"><span class="logo-lg"><b>Marvin</b></span></a>
+			<a href="#" class="logo"><span class="logo-lg"><b>Marvin</b></span></a>
 		</header>
 		
 		<!-- Content Wrapper. Contains page content -->
