Fix 1st bug in #6:
"When clicking the Delete button, the trash panel (Items to delete) is
not shown via AJAX".

--- a/WebContent/resources/marvin/stylesheets/marvin.css
+++ b/WebContent/resources/marvin/stylesheets/marvin.css
@@ -42,6 +42,12 @@
 #filterForm .ui-button-text.ui-c {
 	line-height: 9px;
 }
+#listingForm\3a trashGroup .box {
+	margin-top: 20px;
+}
+#listingForm\3a trashGroup .ui-widget-content {
+	border: none;
+}
 
 /* Password fields should occupy 50% instead. */
 .ui-password {
