Fix 2nd bug in #6
"When confirming the deletion of an administrator, the constraint stops
the action but there is no error message"

--- a/WebContent/resources/marvin/stylesheets/marvin.css
+++ b/WebContent/resources/marvin/stylesheets/marvin.css
@@ -1,6 +1,6 @@
 /* Growl messages positioned below Marvin's top bar. */
 .ui-growl {
-	top: 60px;
+	margin-top: 60px;
 }
 
 /* Input fields manipulation. */
