Fix the position of the AJAX status icons in the decorator (close #17)

--- a/WebContent/resources/marvin/stylesheets/marvin.css
+++ b/WebContent/resources/marvin/stylesheets/marvin.css
@@ -3,6 +3,14 @@
 	margin-top: 60px;
 }
 
+/* AJAX status positioned at the top right, also below Marvin's top bar. */
+#ajaxStatusForm {
+	float: right;
+}
+#ajaxStatusForm li {
+	display: block;
+}
+
 /* Input fields manipulation. */
 .ui-inputfield {
     width: 100%;
