--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="Marvin">
+    <wb-module deploy-name="marvin-1.2">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src-metamodel"/>
         <property name="java-output-path" value="/Marvin/build/classes"/>
-        <property name="context-root" value="Marvin"/>
+        <property name="context-root" value="marvin"/>
     </wb-module>
 </project-modules>
