--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,9 @@
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src-metamodel"/>
+        <dependent-module archiveName="jbutler-wp-1.2.5.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/jbutler-wp/jbutler-wp">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="java-output-path" value="/Marvin/build/classes"/>
         <property name="context-root" value="marvin"/>
     </wb-module>
